new section and foto

--- a/css/styles.css
+++ b/css/styles.css
@@ -312,6 +312,24 @@ img {
 }
 
 
+/*---------- Section-three ----------*/
+
+.section-four {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.section-four-title {
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 78px;
+}
+
+
 /*---------- footer ----------*/
 
 
