--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,10 @@ img {
 /*---------- HERO ----------*/
 .hero {
     background-color: #2E2F42;
-
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero_img.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .hero-container {
