--- a/css/styles.css
+++ b/css/styles.css
@@ -429,6 +429,7 @@ img {
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
+    display: flex;
 }
 
 .footer-text {
@@ -442,6 +443,10 @@ width: 264px;
 
 /*---------- footer-logo ----------*/
 
+.footer-logo-container {
+    margin-right: 120px;
+}
+
 .footer-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -452,6 +457,52 @@ width: 264px;
     text-decoration: none;
     color: #F4F4FD;
 }
+
+/*---------- footer-social ----------*/
+
+.footer-social {
+
+}
+
+.social-title {
+    margin-bottom: 16px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.footer-media-list {
+    display: flex;
+}
+.footer-item {
+    margin-right: 16px;
+}
+.footer-item:last-child {
+    margin-right: 0px;
+}
+
+.footer-icons {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icons:hover,
+.footer-icons:focus {
+    background-color: #31D0AA;
+}
+.footer-icon {
+    width: 24px;
+    height: 24px;
+}
+
 
 
 
