--- a/css/styles.css
+++ b/css/styles.css
@@ -503,9 +503,6 @@ width: 264px;
     height: 24px;
 }
 
-
-
-
 /*---------- Portfolio ----------*/
 
 
@@ -513,26 +510,33 @@ width: 264px;
 /*---------- Filter ----------*/
 
 .filter-button {
-    font-family: inherit;
-    font-weight: 600;
+    padding: 12px 24px;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
     font-size: 16px;
     line-height: 1.5;
-    padding: 8px 16px;
     letter-spacing: 0.04em;
-    color: #4d5ae5;
-    background: #f4f4fd;
+    color: #4D5AE5;
+    background-color: #F4F4FD;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
-    padding: 12px 24px;
-    border: 1px solid  #e7e9fc;
-    flex-direction: row;
+    cursor: pointer;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover {
     color: #ffffff;
-    background: #4d5ae5;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+    border: 1px solid #4D5AE5;
+    background-color: #4D5AE5;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-button:focus {
+    color: #ffffff;
+    border: 1px solid #4D5AE5;
+    background-color: #4D5AE5;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .selector {
@@ -581,6 +585,9 @@ width: 264px;
     background: #ffffff;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.card:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-text {
