--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ img {
 /*---------- HERO ----------*/
 .hero {
     background-color: #2E2F42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero_img.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_img.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -344,7 +344,8 @@ img {
 }
 
 .section-three-icon {
-
+    width: 16px;
+    height: 16px;
 }
 
 
